# map-generator

./: Cargo.toml  README.md
config/: .default.yml.un~  default.yml  default.yml~
heightmap/: Cargo.toml
heightmap/src/: heightmap.rs  lib.rs
heightmap/src/generator2d/: diamond2d.rs  fractal2d.rs  generator2d.rs  midpoint2d.rs  mod.rs
image/: Cargo.toml
image/src/: color.rs  color_ramp.rs  lib.rs  shade.rs  to_image.rs
noise2d/: Cargo.toml
noise2d/src/: gradient2d.rs  lib.rs  noise2d.rs  simplex2d.rs  value2d.rs
src/: config.rs  interpolate.rs  main.rs  map_generator.rs
