[package]
name = "map-generator"
version = "0.1.0"
authors = ["Nico <nico@redstar>"]

[dependencies]
clap = "*"
derive_builder = "0.4.*"
rand = "0.3.*"
serde = "0.9.*"
serde_derive = "0.9.*"
serde_yaml = "0.6.*"

heightmap = {path = "heightmap"}
noise2d = {path = "noise2d"}
image = {path = "image"}
